#81 исправить update у user, habit, list_listhttps://github.com/AlibabaRazboinik/habit_tracker/issues/81
